@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-27T08:14:52Z",
+  "timestamp" : "2022-07-27T16:16:50Z",
   "count_outdated" : 419,
   "uniques_outdated" : 226,
-  "count" : 441,
+  "count" : 442,
   "uniques" : 238,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
