@@ -1,3 +1,10 @@
+2022-07-27T16:16:50Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 226 419 / 238 441
+* notice: next accum: outdated-unq outdated-all / unq all: 226 419 / 238 442
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-27]
+
 2022-07-27T08:14:52Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 226 419 / 237 441
